--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@n8tb1t/use-scroll-position": "^2.0.3",
         "@next/bundle-analyzer": "^11.1.2",
+        "@tailwindcss/forms": "^0.3.3",
         "aos": "^3.0.0-beta.6",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.1",
@@ -21,24 +22,37 @@
         "lodash": "^4.17.15",
         "next": "11.1.2",
         "next-compose-plugins": "^2.2.1",
+        "next-cookies": "^2.0.3",
         "next-fonts": "^1.2.0",
+        "next-pwa": "^5.2.21",
+        "next-seo": "^4.25.1",
+        "nextjs-progressbar": "^0.0.11",
         "polished": "^4.1.3",
         "prettier": "^2.2.1",
         "react": "17.0.2",
         "react-bootstrap": "^1.0.1",
-        "react-countdown": "^2.2.1",
+        "react-content-loader": "^6.0.3",
+        "react-countdown": "^2.3.2",
         "react-countup": "^5.2.0",
         "react-day-picker": "^7.4.8",
-        "react-dom": "17.0.2",
+        "react-dom": "^17.0.2",
+        "react-facebook-login": "^4.1.1",
+        "react-google-login": "^5.2.2",
+        "react-google-recaptcha": "^2.1.0",
+        "react-hook-form": "^7.8.8",
         "react-icons": "^4.2.0",
         "react-lazyload": "^3.0.0",
+        "react-paginate": "^7.1.3",
         "react-player": "^2.3.1",
-        "react-query": "^3.5.16",
+        "react-popper": "^2.2.5",
+        "react-query": "^3.17.2",
         "react-range": "^1.7.0",
+        "react-rating-stars-component": "^2.2.0",
         "react-scroll": "^1.8.1",
         "react-select": "^4.3.1",
         "react-slick": "^0.28.1",
         "react-tilt": "^0.1.4",
+        "react-toastify": "^8.0.2",
         "react-use": "^17.3.1",
         "sass": "^1.32.5",
         "slick-carousel": "^1.8.1",
