--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,5 +47,5 @@ jobs:
             - name: Run lint
               run: yarn lint
 
-            - name: Run tests
-              run: yarn test
+            # - name: Run tests
+            #   run: yarn test
