--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
             "@hooks": ["src/hooks"],
             "@containers/*": ["src/containers/*"],
             "@contexts/*": ["src/contexts/*"],
-            "@framework/*": ["src/framework/basic-rest/*"],
+            "@apis/*": ["src/apis/*"],
             "@settings/*": ["src/settings/*"],
             "@utils/*": ["src/utils/*"]
         }
