--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "lint-staged": "^11.1.2",
         "postcss": "^8.2.4",
         "tailwindcss": "^2.2.4",
+        "tailwindcss-rtl": "^0.7.3",
         "typescript": "^4.1.3"
     },
     "lint-staged": {
